# light-control

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
examples/: home.json  my-home.json
src/: configuration.rs  dummy_configuration.rs  entities.rs  main.rs  mqtt.rs  replay.rs  state_memory.rs  strategy.rs
src/strategy/: room_state.rs  sensor_memory.rs  sensor_states.rs
